# python_starter

./: pyproject.toml
notebooks/: csv.ipynb  dictionary.ipynb  tuplas.ipynb
notebooks/parquet/: parquet.ipynb  titanic.parquet
